--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="CocoaVersion" content="1561.4">
   <style type="text/css">
     p.p2 {margin: 0.0px 0.0px 0.0px 0.0px; text-align: justify; line-height: 17.0px; font: 14.0px Times; color: #212121; -webkit-text-stroke: #212121; background-color: #ffffff}
-    p.p3 {margin: 0.0px 0.0px 12.0px 0.0px; line-height: 14.0px; font: 16.0px Times; color: #212121; -webkit-text-stroke: #212121; background-color: #ffffff; min-height: 19.0px}
+    p.p3 {margin: 0.0px 0.0px 0.0px 0.0px; text-align: justify; line-height: 17.0px; font: 16.0px Times; color: #212121; -webkit-text-stroke: #212121; background-color: #ffffff; min-height: 19.0px}
     p.p4 {margin: 0.0px 0.0px 0.0px 0.0px; line-height: 17.0px; font: 14.0px Times; color: #212121; -webkit-text-stroke: #212121; background-color: #ffffff}
     p.p5 {margin: 0.0px 0.0px 0.0px 0.0px; line-height: 17.0px; font: 12.0px Times; color: #000000; -webkit-text-stroke: #000000}
     p.p6 {margin: 0.0px 0.0px 12.0px 0.0px; line-height: 14.0px; font: 12.0px Times; color: #000000; -webkit-text-stroke: #000000}
