--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="CocoaVersion" content="1561.4">
   <style type="text/css">
     p.p2 {margin: 0.0px 0.0px 0.0px 0.0px; text-align: justify; line-height: 17.0px; font: 14.0px Times; color: #212121; -webkit-text-stroke: #212121; background-color: #ffffff}
-    p.p3 {margin: 0.0px 0.0px 0.0px 0.0px; text-align: justify; line-height: 17.0px; font: 16.0px Times; color: #212121; -webkit-text-stroke: #212121; background-color: #ffffff; min-height: 19.0px}
+    p.p3 {margin: 0.0px 0.0px 0.0px 0.0px; line-height: 17.0px; font: 12.0px Times; color: #000000; -webkit-text-stroke: #000000; min-height: 14.0px}
     p.p4 {margin: 0.0px 0.0px 0.0px 0.0px; line-height: 17.0px; font: 14.0px Times; color: #212121; -webkit-text-stroke: #212121; background-color: #ffffff}
     p.p5 {margin: 0.0px 0.0px 0.0px 0.0px; line-height: 17.0px; font: 12.0px Times; color: #000000; -webkit-text-stroke: #000000}
     p.p6 {margin: 0.0px 0.0px 12.0px 0.0px; line-height: 14.0px; font: 12.0px Times; color: #000000; -webkit-text-stroke: #000000}
@@ -29,9 +29,6 @@
 <h2 style="margin: 0.0px 0.0px 14.9px 0.0px; text-align: center; line-height: 22.0px; font: 18.0px Times; color: #000000; -webkit-text-stroke: #000000"><span class="s1"><b>POLITICAS DE PRIVACIDADE<span class="Apple-converted-space"> </span></b></span></h2>
 <p class="p2"><span class="s1">Esta política de privacidade rege o seu uso do aplicativo de software Yap! para dispositivos móveis que foi criado pela Hexagon. O aplicativo é para localizar promoções e gerenciar cartões de fidelidade, sendo capaz de fazer pagamentos para o estabelecimento.</span></p>
 <p class="p3"><span class="s1"></span><br></p>
-<p class="p4"><span class="s1"><b>Quais informações o aplicativo obtém e como ele é usado?</b></span></p>
-<p class="p5"><span class="s1"><br>
-</span></p>
 <p class="p4"><span class="s1"><b>Informações fornecidas pelo usuário</b></span></p>
 <p class="p5"><span class="s1"><br>
 </span></p>
