--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
   </style>
 </head>
 <body>
-<h2 style="margin: 0.0px 0.0px 14.9px 0.0px; text-align: center; line-height: 22.0px; font: 18.0px Times; color: #000000; -webkit-text-stroke: #000000"><span class="s1"><b>POLITICAS DE PRIVACIDADE<span class="Apple-converted-space"> </span></b></span></h2>
-<p class="p2"><span class="s1">Esta política de privacidade rege o seu uso do aplicativo de software Yap! para dispositivos móveis que foi criado pela Hexagon. O aplicativo é para localizar promoções e gerenciar cartões de fidelidade, sendo capaz de fazer pagamentos para o estabelecimento.</span></p>
+<h2 style="margin: 0.0px 0.0px 14.9px 0.0px; text-align: center; line-height: 22.0px; font: 18.0px Times; color: #000000; -webkit-text-stroke: #000000; min-height: 23.0px"><span class="s1"></span><br></h2>
+<p class="p2"><span class="s1">Esta política de privacidade rege o seu uso do aplicativo de software Kupon para dispositivos móveis que foi criado pela Hexagon. O aplicativo é para localizar promoções e gerenciar cartões de fidelidade, sendo capaz de fazer pagamentos para o estabelecimento.</span></p>
 <p class="p3"><span class="s1"><br>
 </span></p>
 <p class="p4"><span class="s1"><b>Informações fornecidas pelo usuário</b></span></p>
@@ -66,19 +66,19 @@
 <p class="p4"><span class="s1"><b>Quais são os meus direitos de exclusão?</b></span></p>
 <p class="p3"><span class="s1"><br>
 </span></p>
-<p class="p2"><span class="s1">Você pode parar toda a coleta de informações pelo Aplicativo facilmente, desinstalando o Aplicativo. Você pode usar os processos de desinstalação padrão que podem estar disponíveis como parte de seu dispositivo móvel ou via mercado ou rede de aplicativos móveis. Você também pode solicitar a exclusão via e-mail, em privacy@appyap.com.br.</span></p>
+<p class="p2"><span class="s1">Você pode parar toda a coleta de informações pelo Aplicativo facilmente, desinstalando o Aplicativo. Você pode usar os processos de desinstalação padrão que podem estar disponíveis como parte de seu dispositivo móvel ou via mercado ou rede de aplicativos móveis. Você também pode solicitar a exclusão via e-mail, em privacy@appkupon.com.br.</span></p>
 <p class="p5"><span class="s1"><br>
 </span></p>
 <p class="p4"><span class="s1"><b>Política de Retenção de Dados, Gerenciando Suas Informações</b></span></p>
 <p class="p3"><span class="s1"><br>
 </span></p>
-<p class="p4"><span class="s1">Nós manteremos os dados fornecidos pelo usuário enquanto você usar o aplicativo e por um tempo razoável depois disso. Nós reteremos as informações coletadas automaticamente por até 24 meses e, a partir daí, poderemos armazená-las de forma agregada. Se você quiser que excluamos os Dados fornecidos pelo usuário que você forneceu por meio do Aplicativo, entre em contato conosco pelo e-mail privacy@appyap.com.br e responderemos em um tempo razoável. Observe que alguns ou todos os dados fornecidos pelo usuário podem ser necessários para que o aplicativo funcione corretamente.</span></p>
+<p class="p4"><span class="s1">Nós manteremos os dados fornecidos pelo usuário enquanto você usar o aplicativo e por um tempo razoável depois disso. Nós reteremos as informações coletadas automaticamente por até 24 meses e, a partir daí, poderemos armazená-las de forma agregada. Se você quiser que excluamos os Dados fornecidos pelo usuário que você forneceu por meio do Aplicativo, entre em contato conosco pelo e-mail privacy@appkupon.com.br e responderemos em um tempo razoável. Observe que alguns ou todos os dados fornecidos pelo usuário podem ser necessários para que o aplicativo funcione corretamente.</span></p>
 <p class="p5"><span class="s1"><br>
 </span></p>
 <p class="p4"><span class="s1"><b>Crianças</b></span></p>
 <p class="p3"><span class="s1"><br>
 </span></p>
-<p class="p2"><span class="s1">Não utilizamos o Aplicativo para solicitar conscientemente dados de ou para menores de 13 anos. Se um pai ou responsável ficar ciente de que seu filho nos forneceu informações sem o consentimento deles, ele deverá entrar em contato conosco em privacy@appyap.com.br. Nós excluiremos essas informações de nossos arquivos em um tempo razoável.</span></p>
+<p class="p2"><span class="s1">Não utilizamos o Aplicativo para solicitar conscientemente dados de ou para menores de 13 anos. Se um pai ou responsável ficar ciente de que seu filho nos forneceu informações sem o consentimento deles, ele deverá entrar em contato conosco em privacy@appkupon.com.br. Nós excluiremos essas informações de nossos arquivos em um tempo razoável.</span></p>
 <p class="p5"><span class="s1"><br>
 </span></p>
 <p class="p4"><span class="s1"><b>Segurança</b></span></p>
@@ -102,7 +102,7 @@
 <p class="p4"><span class="s1"><b>Contate-nos</b></span></p>
 <p class="p10"><span class="s1"><br>
 </span></p>
-<p class="p2"><span class="s1">Se você tiver alguma dúvida sobre privacidade durante o uso do aplicativo, ou tiver dúvidas sobre nossas práticas, entre em contato conosco por email em privacy@appyap.com.br</span></p>
+<p class="p2"><span class="s1">Se você tiver alguma dúvida sobre privacidade durante o uso do aplicativo, ou tiver dúvidas sobre nossas práticas, entre em contato conosco por email em privacy@appkupon.com.br</span></p>
 <p class="p5"><span class="s1"><br>
 </span></p>
 </body>
